menyelesakan fitur crud untuk manajemen fasilitas kesehatan. closes #34
