# internal/framework/transport/controller/FacilityController.go
@@ -11,78 +11,78 @@ import (
 	"github.com/labstack/echo/v4"
 )
 
-type UserController struct {
-	srv *service.UserService
+type FacilityController struct {
+	srv *service.FacilityService
 }
 
-func NewUserController(srv *service.UserService) *UserController {
-	return &UserController{srv: srv}
+func NewFacilityController(srv *service.FacilityService) *FacilityController {
+	return &FacilityController{srv: srv}
 }
 
 // godoc
-// @Summary GetAllUser
-// @Description Fetch All User Data
-// @Tags User
+// @Summary GetAllFacility
+// @Description Fetch All Facility Data
+// @Tags Facility
 // @Security ApiKey
 // @Accept json
 // @Produce json
-// @Success 200 {object} response.MessageData{data=[]response.User} success
+// @Success 200 {object} response.MessageData{data=[]models.MedicalFacility} success
 // @Failure 417 {object} response.Error{} error
 // @Failure 500 {object} response.Error{} error
-// @Router /user [get]
-func (acon UserController) GetAllUser(c echo.Context) error {
+// @Router /facility [get]
+func (acon FacilityController) GetAllFacility(c echo.Context) error {
 	res, err := acon.srv.FindAll()
 
-	if r, ok := check.HTTP(res, err, "Fetch User"); !ok {
+	if r, ok := check.HTTP(res, err, "Fetch Facility"); !ok {
 		return c.JSON(r.Code, r.Result)
 	}
 
 	return c.JSON(200, response.MessageData{
-		Message: "User Fetched",
+		Message: "Facility Fetched",
 		Data: res,
 	})
 }
 
 // godoc
-// @Summary GetUserByID
-// @Description Fetch User Data By ID
-// @Tags User
+// @Summary GetFacilityByID
+// @Description Fetch Facility Data By ID
+// @Tags Facility
 // @Security ApiKey
 // @Accept json
 // @Produce json
 // @Param id path int true "user id"
-// @Success 200 {object} response.MessageData{data=response.User} success
+// @Success 200 {object} response.MessageData{data=response.FacilityDetails} success
 // @Failure 417 {object} response.Error{} error
 // @Failure 500 {object} response.Error{} error
-// @Router /user/:id [get]
-func (acon UserController) GetUserByID(c echo.Context) error {
+// @Router /facility/:id [get]
+func (acon FacilityController) GetFacilityByID(c echo.Context) error {
 	id, _ := strconv.Atoi(c.Param("id"))
 	res, err := acon.srv.FindByID(id)
 
-	if r, ok := check.HTTP(res, err, "Fetch User"); !ok {
+	if r, ok := check.HTTP(res, err, "Fetch Facility"); !ok {
 		return c.JSON(r.Code, r.Result)
 	}
 
 	return c.JSON(200, response.MessageData{
-		Message: "User Fetched",
+		Message: "Facility Fetched",
 		Data: res,
 	})
 }
 
 // godoc
-// @Summary CreateUser
-// @Description Create New User Data
-// @Tags User
+// @Summary CreateFacility
+// @Description Create New Facility Data
+// @Tags Facility
 // @Security ApiKey
 // @Accept json
 // @Produce json
-// @Param body body request.UserRequest true "user data"
-// @Success 200 {object} response.MessageOnly{} success
+// @Param body body request.Facility true "user data"
+// @Success 201 {object} response.MessageOnly{} success
 // @Failure 417 {object} response.Error{} error
 // @Failure 500 {object} response.Error{} error
-// @Router /user [post]
-func (acon UserController) Create(c echo.Context) error {
-	var req request.UserRequest
+// @Router /facility [post]
+func (acon FacilityController) Create(c echo.Context) error {
+	var req request.Facility
 	c.Bind(&req)
 	
 	if r, ok := check.HTTP(nil, req.Validate(), "Validate"); !ok {
@@ -91,48 +91,48 @@ func (acon UserController) Create(c echo.Context) error {
 
 
 	err := acon.srv.Create(req)
-	if r, ok := check.HTTP(nil, err, "Create User"); !ok {
+	if r, ok := check.HTTP(nil, err, "Create Facility"); !ok {
 		return c.JSON(r.Code, r.Result)
 	}
 
 	return c.JSON(201, response.MessageOnly{
-		Message: "User Created",
+		Message: "Facility Created",
 	})
 }
 
 // godoc
-// @Summary UpdateUser
-// @Description Update User Data By ID
-// @Tags User
+// @Summary UpdateFacility
+// @Description Update Facility Data By ID
+// @Tags Facility
 // @Security ApiKey
 // @Accept json
 // @Produce json
 // @Param id path int true "user id"
-// @Param body body request.UserRequest true "user data"
+// @Param body body request.Facility true "user data"
 // @Success 200 {object} response.MessageOnly{} success
 // @Failure 417 {object} response.Error{} error
 // @Failure 500 {object} response.Error{} error
-// @Router /user/:id/update [put]
-func (acon UserController) Update(c echo.Context) error {
+// @Router /facility/:id/update [put]
+func (acon FacilityController) Update(c echo.Context) error {
 	id, _ := strconv.Atoi(c.Param("id"))
-	var req request.UserRequest
+	var req request.Facility
 	c.Bind(&req)
 
 	err := acon.srv.Update(id, req)
 
-	if r, ok := check.HTTP(nil, err, "Update User"); !ok {
+	if r, ok := check.HTTP(nil, err, "Update Facility"); !ok {
 		return c.JSON(r.Code, r.Result)
 	}
 
 	return c.JSON(200, response.MessageOnly{
-		Message: fmt.Sprintf("User #%d Updated", id),
+		Message: fmt.Sprintf("Facility #%d Updated", id),
 	})
 }
 
 // godoc
-// @Summary UpdateUser
-// @Description Delete User Data By ID
-// @Tags User
+// @Summary UpdateFacility
+// @Description Delete Facility Data By ID
+// @Tags Facility
 // @Security ApiKey
 // @Accept json
 // @Produce json
@@ -140,17 +140,17 @@ func (acon UserController) Update(c echo.Context) error {
 // @Success 200 {object} response.MessageOnly{} success
 // @Failure 417 {object} response.Error{} error
 // @Failure 500 {object} response.Error{} error
-// @Router /user/:id/delete [delete]
-func (acon UserController) Delete(c echo.Context) error {
+// @Router /facility/:id/delete [delete]
+func (acon FacilityController) Delete(c echo.Context) error {
 	id, _ := strconv.Atoi(c.Param("id"))
 
 	err := acon.srv.Delete(id)
 
-	if r, ok := check.HTTP(nil, err, "Update User"); !ok {
+	if r, ok := check.HTTP(nil, err, "Delete Facility"); !ok {
 		return c.JSON(r.Code, r.Result)
 	}
 
 	return c.JSON(200, response.MessageOnly{
-		Message: fmt.Sprintf("User #%d Updated", id),
+		Message: fmt.Sprintf("Facility #%d Deleted", id),
 	})
 }
